--- a/vectors.html
+++ b/vectors.html
@@ -17,8 +17,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML"></script>
 
     <!-- loads page script files-->
-    <script src="scripts/main.js" defer></script>
     <script src="scripts/SelectLanguage.js" defer></script>
+    <script src="scripts/ArrayFunctions.js" defer></script>
+    <script src="scripts/SVGDrawing.js"defer></script>
+    <script src="scripts/vectorsPage.js" defer></script>
+   
 </head>
 
 <body>
