--- a/vectors.html
+++ b/vectors.html
@@ -980,98 +980,7 @@
             </p>
 
             <figure class="centered"><!--showing coordinate-plane, `vecv_r` as the water velocity and `vecv` as the velocity with which the boat is propelled-->
-                <svg
-					id="svg2_1"
-                    width="670" 
-					height="410"
-					viewBox="0 0 670 410" 
-					xmlns="http://www.w3.org/2000/svg">
-					<!--https://developer.mozilla.org/en-US/docs/Web/CSS/named-color-->
-					<!--Lower river bank
-					<rect
-				       style="fill:#af634a;fill-opacity:0.84"
-				       width="670"
-				       height="50"
-				       x="0"
-				       y="360" />
-					<text class="lang lang-en" x="500" y="390" font-size="25" stroke="black" font-weight="bold">
-				        River bank
-				    </text>
-					<text class="lang lang-es" lang="es" x="500" y="390" font-size="25" stroke="black" font-weight="bold">
-				        Orilla del río
-				    </text> -->
-					<!--Upper river bank
-					<rect
-				       style="fill:#af634a;fill-opacity:0.84"
-				       width="670"
-				       height="50"
-				       x="0"
-				       y="0" />
-					<text class="lang lang-en" x="500" y="30" font-size="25" stroke="black" font-weight="bold">
-				        River bank
-				    </text>
-					<text class="lang lang-es" lang="es" x="500" y="30" font-size="25" stroke="black" font-weight="bold">
-				        Orilla del río
-				    </text>-->
-					<!--River
-					<rect
-				       style="fill:mediumaquamarine"
-				       width="670"
-				       height="310"
-				       x="0"
-				       y="50" />
-					<text class="lang lang-en" x="500" y="192" font-size="25" stroke="brown" fill="brown" font-weight="bold">
-				        River
-				    </text>
-					<text class="lang lang-es" lang="es" x="500" y="192" font-size="25" stroke="brown" fill="brown" font-weight="bold">
-				        Río
-				    </text>-->
-					<!--X-axis
-					<line x1="50" y1="320" x2="400" y2="320" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
-				    <text x="380" y="340" font-size="25" stroke="brown" fill="brown">
-						x
-					</text>-->
-					<!--Y-axis
-					<line x1="250" y1="350" x2="250" y2="150" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
-				    <text x="230" y="160" font-size="25" stroke="brown" fill="brown">
-						y
-					</text>-->
-					<!--Vr <9,0> Km/h scale 4:1
-					<line x1="400" y1="250" x2="436" y2="250" stroke="brown" stroke-width="2" marker-end="url(#Brownarrow)" />
-				    <text x="410" y="235" font-size="20" stroke="brown" fill="brown">
-						V
-						<tspan dx="-5" dy="8" font-size="20" stroke-width="0.3">r</tspan>
-					</text>-->
-					<!--Vy <0,36> Km/h scale 4:1
-					<line x1="250" y1="320" x2="250" y2="176" stroke="green" stroke-width="2" marker-end="url(#Greenarrow)" />
-				    <text x="255" y="220" font-size="20" stroke="green" fill="green">
-						V
-						<tspan dx="-5" dy="8" font-size="20" stroke-width="0.3">y</tspan>
-					</text>-->
-					<!--Vx <-9,0> Km/h scale 4:1
-					<line x1="250" y1="320" x2="214" y2="320" stroke="green" stroke-width="2" marker-end="url(#Greenarrow)" />
-				    <text x="210" y="340" font-size="20" stroke="green" fill="green">
-						V
-						<tspan dx="-5" dy="8" font-size="20" stroke-width="0.3">x</tspan>
-					</text>-->
-					<!--V <-9,36> Km/h scale 4:1
-					<line x1="214" y1="320" x2="214" y2="176" stroke="blue" stroke-width="2" stroke-dasharray="5,5" />
-					<line x1="250" y1="176" x2="214" y2="176" stroke="blue" stroke-width="2" stroke-dasharray="5,5" />
-					<line x1="250" y1="320" x2="214" y2="176" stroke="blue" stroke-width="2" marker-end="url(#Bluearrow)" />
-				    <text x="226" y="220" font-size="20" stroke="blue" fill="blue">
-						V
-					</text>-->
-					<!--Boat-->
-					<!--moves the object by 20 and 20, and rotates -104º with +angle clockwise
-					<g transform="translate(230, 300) 
-									rotate(-104, 20, 20)">
-				    	<path
-							d="M 0 10 q 20 -10 40 10 q -20 20 -40 10 z"
-							stroke="brown"
-							style="fill:none" 
-						/>
-				    </g>--> 
-				</svg>
+                <svg id="svg2_1"></svg>
 
                 <figcaption class="lang lang-en"><b>Figure 2.1</b>, showing coordinate-plane, `vecv_r` as the water velocity and `vecv` as the velocity with which the boat is propelled.</figcaption>
                 <figcaption class="lang lang-es" lang="es"><b>Figura 2.1</b>, mostrando plano de coordenadas, `vecv_r` como la velocidad del agua del río y `vecv` como la velocidad con la que se propulsa el bote.</figcaption>
