--- a/vectors.html
+++ b/vectors.html
@@ -1175,55 +1175,10 @@
             </p>
             
             <figure class="centered"><!--sum of `veca`, `vecb`, `vecc` and `vecd` using the graphical method-->
-                <svg
-					width="400" 
-					height="300"
-					viewBox="0 0 400 300" 
-					xmlns="http://www.w3.org/2000/svg">
+                <svg id="svg2_2"></svg>
 
-                    <!-- Dibujar líneas verticales -->
-                    <g stroke="green" stroke-width="1">
-                        <script type="application/ecmascript"> <![CDATA[
-                        var x;
-                        for (x = 0; x <= 400; x += 40) {
-                            document.write('<line x1="' + x + '" y1="0" x2="' + x + '" y2="300" />');
-                        }
-                        ]]> </script>
-                    </g>
-
-                    <!-- Dibujar líneas horizontales -->
-                    <g stroke="green" stroke-width="1">
-                        <script type="application/ecmascript"> <![CDATA[
-                        var y;
-                        for (y = 0; y <= 300; y += 40) {
-                            document.write('<line x1="0" y1="' + y + '" x2="400" y2="' + y + '" />');
-                        }
-                        ]]> </script>
-                    </g>
-					<!--Vector a = 2i + 3j scale 40:1-->
-					<line x1="40" y1="200" x2="120" y2="80" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
-				    <text x="70" y="120" font-size="25" stroke="brown" fill="brown" font-weight="bold">
-						a
-					</text>
-					<!--Vector b = 4i - 2j`scale 20:1-->
-					<line x1="120" y1="80" x2="280" y2="160" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
-				    <text x="200" y="110" font-size="25" stroke="brown" fill="brown" font-weight="bold">
-						b
-					</text>
-					<!--Vector c = 3i - 2j scale 20:1-->
-					<line x1="280" y1="160" x2="400" y2="240" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
-				    <text x="345" y="195" font-size="25" stroke="brown" fill="brown" font-weight="bold">
-						c
-					</text>
-					<!--Vector d = -9i + j scale 20:1-->
-					<line x1="400" y1="240" x2="40" y2="200" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
-				    <text x="200" y="210" font-size="25" stroke="brown" fill="brown" font-weight="bold">
-						d
-					</text>
-				</svg>
-
-                <figcaption class="lang lang-en"><b>Figure 1.b</b>, showing the sum of `veca`, `vecb`, `vecc` and `vecd` using the graphical method.</figcaption>
-                <figcaption class="lang lang-es" lang="es"><b>Figura 1.b</b>, mostrando la suma de `veca`, `vecb`, `vecc` y `vecd` por el método gráfico.</figcaption>
+                <figcaption class="lang lang-en"><b>Figure 2.2</b>, showing the sum of `veca`, `vecb`, `vecc` and `vecd` using the graphical method.</figcaption>
+                <figcaption class="lang lang-es" lang="es"><b>Figura 2.2</b>, mostrando la suma de `veca`, `vecb`, `vecc` y `vecd` por el método gráfico.</figcaption>
             </figure>
 
             <p class="lang lang-en">
