--- a/geometry.html
+++ b/geometry.html
@@ -14,7 +14,7 @@
 	<!--To set the viewport of the page, which will give the browser instructions on how to control the page's dimensions and scaling.-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- load the default AsciiMath configuration  http://asciimath.org/ -->
+    <!--Load the default AsciiMath configuration  http://asciimath.org/ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML"></script>
 
     <!-- loads page script files-->
