--- a/vectors.html
+++ b/vectors.html
@@ -16,6 +16,9 @@
     <!-- load the default AsciiMath configuration  http://asciimath.org/ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML"></script>
 
+     <!--Load math.js library https://mathjs.org/ -->
+     <script src="https://unpkg.com/mathjs@13.0.0/lib/browser/math.js"></script>
+
     <!-- loads page script files-->
     <script src="scripts/SelectLanguage.js" defer></script>
     <script src="scripts/ArrayFunctions.js" defer></script>
