--- a/vectors.html
+++ b/vectors.html
@@ -1391,7 +1391,7 @@
             <h3 class="lang lang-en">Exercise 6</h3>
 			<h3 class="lang lang-es" lang="es">Ejercicio 6</h3>
             <p class="lang lang-en">
-                An airplane is moving with a speed of 600 km/h in the NE direction. Find the projection of its velocity in the east direction.
+                An airplane is moving with a speed of 600 km/h in the NE direction. Find the projection of its velocity onto the east direction.
             </p>
 			 <p class="lang lang-es" lang="es">
                 Un avión se desplaza a una velocidad de 600 km/h en dirección NE. Halla la proyección de su velocidad en la dirección este.
