--- a/vectors.html
+++ b/vectors.html
@@ -1439,7 +1439,7 @@
             <h3 class="lang lang-en">Exercise 7</h3>
 			<h3 class="lang lang-es" lang="es">Ejercicio 7</h3>
             <p class="lang lang-en">
-                A rigid body rotates with an angular velocity `w` given by the vector `vecw = vec i + vecj + veck` rad/s. Calculate the linear speed `vecv` with which a point P of the body moves, whose position vector is `vecr = 2veci - 2vecj + veck` m, knowing that `vecv = vecw xx vecr`.
+                A rigid body rotates with an angular velocity `w` given by the vector `vecw = vec i + vecj + veck` rad/s. Calculate the linear velocity `vecv` with which a point P of the body moves, whose position vector is `vecr = 2veci - 2vecj + veck` m, knowing that `vecv = vecw xx vecr`.
             </p>
 			 <p class="lang lang-es" lang="es">
                 Un cuerpo rígido gira con una velocidad angular `w` dada por el vector `vecw = vec i + vecj + veck` rad/s. Calcula la velocidad lineal `vecv` con que se mueve un punto P del cuerpo, cuyo vector de posición es `vecr = 2veci - 2vecj + veck` m, sabiendo que `vecv = vecw xx vecr`.
@@ -1452,15 +1452,7 @@
             </p>
             <p>&emsp;`vecv = vecw xx vecr = |[veci, vecj, veck], [1, 1, 1], [2, -2, 1]| = |[1, 1], [-2, 1]|*veci - |[1, 1], [2, 1]|*vecj + |[1, 1], [2, -2]|*veck => (1+2)*veci - (1-2)*vecj + (-2-2)*veck`</p>
             <p>&emsp; `=> vecv = 3veci + vecj -4veck`</p>
-            <p> `vecv = vecw xx vecr =` <span id="2_7_1" style="display: inline-block;"></span> = <span id="2_7_2"></span></p>
-            <!--
-            <div class="container">
-                <div id="2_7_1"></div>
-            </div>
-            <div class="container">
-                <div id="2_7_2"></div>
-            </div>-->
-            
+            <p> `vecv = vecw xx vecr =` <span id="2_7_1" style="display: inline-block;"></span> = <span id="2_7_2"></span></p>  
         </section>
 
         <section><!-- 2.8 Exercise 8-->
