--- a/vectors.html
+++ b/vectors.html
@@ -1023,7 +1023,7 @@
                 Entonces, para permanecer perpendicular al río, la componente x de la suma debe ser cero.
             </p>
             <p >
-                &emsp; `9 + v_x = 0 => v_x = -9 (km)/h`
+                &emsp; `9 + v_x = 0 => v_x = -9 (Km)/h`
             </p>
 
             <p class="lang lang-en">
@@ -1033,7 +1033,7 @@
                 y, como el barquero quire cruzar con una velocidad media de 36 km/h, la componente y de la suma debe ser 36 km/h.
             </p>
             <p>
-                &emsp; `v_y = 36 (km)/h`,
+                &emsp; `v_y = 36 (Km)/h`,
             </p>
 
             <p>
@@ -1048,7 +1048,7 @@
                 La magnitud del vector `vec v` es la velocidad a la se impulsa el bote. Y se expresa como `norm(vecv)`.
             </p>
             <p>
-                &emsp; `norm(vecv) = sqrt(v_x^2+v_y^2) = sqrt(9^2 + 36^2) = sqrt(81+1296) = sqrt(1377) = 37.11 (km)/h.`
+                &emsp; `norm(vecv) = sqrt(v_x^2+v_y^2) = sqrt(9^2 + 36^2) = sqrt(81+1296) = sqrt(1377) = 37.11 (Km)/h.`
             </p>
 
             <p class="lang lang-en">
