--- a/vectors.html
+++ b/vectors.html
@@ -27,6 +27,7 @@
     <script src="scripts/ArrayFunctions.js" defer></script>
     <script src="scripts/SVGDrawing.js"defer></script>
     <script src="scripts/vectorsPage.js" defer></script>
+    <script src="scripts/vectors_exercise_1.js" defer></script>
    
 </head>
 
@@ -970,6 +971,7 @@
         </div>
         
         <section id=vectors_exercise_1> <!-- 2.1 Exercise 1-->
+            <!--
             <h3 class="lang lang-en">Exercise 1</h3>
             <h3 class="lang lang-es" lang="es">Ejercicio 1</h3>
             <p class="lang lang-en">
@@ -1077,9 +1079,10 @@
             </p>
             <p class="lang lang-es" lang="es">
                 Entonces, la respuesta al ejercicio es que la embarcación debe ser impulsada a una velocidad de 37,11 Km/h y en una dirección que forme 104º con el río.
-            </p>
+            </p>-->
             <aside><!--References-->
                 <!-- references to concepts used in this problem target="_blank" will display the link in a new tab. -->
+                <!--
                 <h4 class="lang lang-en">References</h4>
                 <h4 class="lang lang-es" lang="es">Referencias</h4>
                 <ul>
@@ -1104,7 +1107,7 @@
                         </a>
                     </li>
                 </ul>
-            </aside>
+            </aside>-->
         </section>
 
         <section> <!-- 2.2 Exercise 2-->
