--- a/vectors.html
+++ b/vectors.html
@@ -307,7 +307,7 @@
                 Y su <strong>dirección</strong> se calcula mediante
             </p>
             <div class="container">
-                <div  class="center">`theta = tan^1 (y/x)`</div>
+                <div  class="center">`theta = arctan (y/x)`</div>
                 <div  class="right" id="[1.3]">[1.3]</div>
             </div>
             <p class="lang lang-en">
@@ -516,10 +516,20 @@
                 Donde `theta` es el ángulo comprendido entre `vecv` y `vecw`.
             </p>
             <p class="lang lang-en">
+                From <a href="[1.12]">[1.12]</a> we can express `theta` as:
+            </p>
+            <p class="lang la`theng-es" lang="es">
+                De <a href="[1.12]">[1.12]</a> podemos expresar `theta` como.
+            </p>
+            <div class="container">
+                <div  class="center">`theta = arccos((norm(vecv)norm(vecw))/(vecv*vecw))`</div>
+                <div  class="right" id="[1.13]">[1.13]</div>
+            </div>
+            <p class="lang lang-en">
                 When the dot product of two vectors is zero, is said that both vectors are <strong>orthogonal</strong> or perpendicular. 
             </p>
             <p class="lang lang-es" lang="es">
-                WCuando el producto escalar de dos vectores es cero, se dice que ambos vectores son <strong>ortogonales</strong> o perpendiculares. 
+                Cuando el producto escalar de dos vectores es cero, se dice que ambos vectores son <strong>ortogonales</strong> o perpendiculares. 
             </p>
         </section>
 
@@ -547,7 +557,7 @@
             </p>
             <div class="container">
                 <div  class="center">`proj_v vecw = norm(proj_v vecw)*vecu_v`</div>
-                <div  class="right" id="[1.13]">[1.13]</div>
+                <div  class="right" id="[1.14]">[1.14]</div>
             </div>  
             <p class="lang lang-en">
                 From the definition of <a href="geometry.html#[2.3]" target="_blank"> cosine</a> it follows that the magnitude of this projection vector can be calculated as:
@@ -557,7 +567,7 @@
             </p>                
             <div class="container">
                 <div  class="center">`norm(proj_v vecw) = norm(vecw)costheta`</div>
-                <div  class="right" id="[1.14]">[1.14]</div>
+                <div  class="right" id="[1.15]">[1.15]</div>
             </div>
             <p class="lang lang-en">
                 Where `theta` is the angle between `vecv` and `vecw`.
@@ -573,7 +583,7 @@
             </p>
             <div class="container">
                 <div  class="center">`norm(proj_v vecw) = vecw*vecv/norm(vecv) = vecw*vecu_v`</div>
-                <div  class="right" id="[1.15]">[1.15]</div>
+                <div  class="right" id="[1.16]">[1.16]</div>
             </div>
             <p class="lang lang-en">
                 So, using the coordinates of `vecv` ` << x_1, y_1, z_1 >> ` and of `vecw` ` << x_2, y_2, z_2 >>` to calculate their dot product:
@@ -583,7 +593,7 @@
             </p>
             <div class="container">
                 <div  class="center">`norm(proj_v w) = (x_1*x_2 + y_1*y_2 + z_1*z_2)/sqrt(x_1^2+y_1^2+z_1^2)`</div>
-                <div  class="right" id="[1.16]">[1.16]</div>
+                <div  class="right" id="[1.17]">[1.17]</div>
             </div>
         </section>
 
@@ -610,7 +620,7 @@
             </p>
             <div class="container">
                 <div  class="center">`norm(vecv xx vecw) = norm(vecv)norm(vecw)sin(theta)`</div>
-                <div  class="right" id="[1.17]">[1.17]</div>
+                <div  class="right" id="[1.18]">[1.18]</div>
             </div>
             <p class="lang lang-en">
                 Then, the magnitude (or length) of the cross product can be interpreted as the area of the parallelogram that the vectors span.
@@ -695,7 +705,7 @@
             </p>
             <div class="container">
                 <div  class="center">`vecv xx vecw = << y_1*z_2 - z_1*y_2, z_1*x_2 - x_1*z_2, x_1*y_2 - y_1*x_2 >> `</div>
-                <div  class="right" id="[1.18]">[1.18]</div>
+                <div  class="right" id="[1.19]">[1.19]</div>
             </div>
             <p class="lang lang-en">
                 Each component of this resulting vector is the determinant of a 2x2 matrix formed by eliminating the row and column of the corresponding component from a 3x3 matrix containing the unit vectors `veci`, `vecj`, `veck` in the first row, the components of `vecv` in the second row, and the components of `vecw` in the third row.
@@ -705,7 +715,7 @@
             </p>
             <div class="container">
                 <div  class="center">`|[veci, vecj, veck], [x_1, y_1, z_1], [x_2, y_2, z_2]| = |[y_1, z_1], [y_2, z_2]|*veci - |[x_1, z_1], [x_2, z_2]|*vecj + |[x_1, y_1], [x_2, y_2]|*veck`</div>
-                <div  class="right" id="[1.19]">[1.19]</div>
+                <div  class="right" id="[1.20]">[1.20]</div>
             </div><br><br>
             <p class="lang lang-en">
                 Properties of the cross product:
@@ -741,7 +751,7 @@
             <p>&emsp; </p>
             <div class="container">
                 <div  class="center">`vecM = vecr xx vecv`</div>
-                <div  class="right" id="[1.20]">[1.20]</div>
+                <div  class="right" id="[1.21]">[1.21]</div>
             </div>
             <p class="lang lang-en">
                 The position vector, `vecr`, extends from the point of interest P to the origin of `vecv`.
@@ -814,7 +824,7 @@
             </p>
             <div class="container">
                 <div  class="center">`norm(vecM_l) = vecu_l * (vecr xx vecv)`</div>
-                <div  class="right" id="[1.21]">[1.21]</div>
+                <div  class="right" id="[1.22]">[1.22]</div>
             </div>
             <p class="lang lang-en">
                 To streamline the calculations even further, mathematically we can combine the cross and dot product into what is known as a <strong>mixed triple product</strong>. In the mixed triple product we write the cross product as a determinant in the form:
@@ -824,13 +834,13 @@
             </p>
             <div class="container">
                 <div  class="center">`norm(vecM_l) = vecu_l * (vecr xx vecv) = |[u_(lx), u_(ly), u_(lz)], [r_x, r_y, r_z], [v_x, v_y, v_z]| = u_(lx)*|[r_y, r_z], [v_y, v_z]| - u_(ly)*|[r_x, r_z], [v_x, v_z]| + u_(lz)*|[r_x, r_y], [v_x, v_y]|`</div>
-                <div  class="right" id="[1.22]">[1.22]</div>
+                <div  class="right" id="[1.23]">[1.23]</div>
             </div><br><br>
             <p class="lang lang-en">Finally, since a vector can be expressed as the product of its modulus and its unit vector, we have:</p>
             <p class="lang lang-es" lang="es">Finalmente, como un vector se puede expresar como el producto de su módulo por su vecotr unitario, tenemos que:</p>
             <div class="container">
                 <div  class="center">`vecM_l = norm(vecM_l) * vecu_l`</div>
-                <div  class="right" id="[1.23]">[1.23]</div>
+                <div  class="right" id="[1.24]">[1.24]</div>
             </div>
         </section>
 
@@ -851,7 +861,7 @@
             </p>
             <div class="container">
                 <div  class="center">`vecf(t)=f_x(t)veci+f_y(t)vecj+f_z(t)veck`</div>
-                <div  class="right" id="[1.24]">[1.24]</div>
+                <div  class="right" id="[1.25]">[1.25]</div>
             </div>
             <p class="lang lang-en">
                 where `f_x(t)`, `f_y(t)`, and `f_z(t)` are the <strong>coordinate functions</strong> of the parameter t, and the domain of this vector-valued function is the intersection of the domains of the functions `f_x(t)`, `f_y(t)` and `f_z(t)`.
@@ -872,7 +882,7 @@
             </p>
             <div class="container">
                 <div  class="center">`vecf'(t) = (dvecf)/dt = (df_x)/dtveci + (df_y)/dtvecj +(df_z)/dtveck`</div>
-                <div  class="right" id="[1.25]">[1.25]</div>
+                <div  class="right" id="[1.26]">[1.26]</div>
             </div>
         </section>
 
@@ -893,7 +903,7 @@
             </p>
             <div class="container">
                 <div  class="center">`(delf)/(delx)`</div>
-                <div  class="right" id="[1.26]">[1.26]</div>
+                <div  class="right" id="[1.27]">[1.27]</div>
             </div>
             <p class="lang lang-en">
                 The <strong>total derivative</strong> of the function `f(x,y,z)` can be calculated using the expression:
@@ -904,7 +914,7 @@
             <p>&emsp; </p>
             <div class="container">
                 <div  class="center">`df = (delf)/(delx)dx + (delf)/(dely)dy + (delf)/(delz)dz`</div>
-                <div  class="right" id="[1.27]">[1.27]</div>
+                <div  class="right" id="[1.28]">[1.28]</div>
             </div>
         </section>
 
@@ -919,7 +929,7 @@
             </p>
             <div class="container">
                 <div  class="center">`int vecf(t)dt = int << f_x(t), f_y(t), f_z(t) >> dt = << int f_x(t)dt, int f_y(t)dt, int f_z(t)dt >> `</div>
-                <div  class="right" id="[1.28]">[1.28]</div>
+                <div  class="right" id="[1.29]">[1.29]</div>
             </div>
         </section>
 
