--- a/vectors.html
+++ b/vectors.html
@@ -32,8 +32,23 @@
 </head>
 
 <body>
-    <header>
-        <h1 id="Top" class="lang lang-en" >VECTORS</h2>
+	<div class="lang lang-en">
+		<header>
+			<h1 id="Top" >VECTORS</h1>
+		</header>
+		<nav>
+			
+		</nav>
+	</div>
+	<div class="lang lang-es">
+		<header>
+			<h1 id="Top" >VECTORES</h1>
+		</header>
+		<nav>
+			
+		</nav>
+	</div>
+        
         <h1 id="Arriba" class="lang lang-es" lang="es" >VECTORES</h2>
     </header>
 
