--- a/vectors.html
+++ b/vectors.html
@@ -34,40 +34,28 @@
 <body>
 	<div class="lang lang-en">
 		<header>
-			<h1 id="Top" >VECTORS</h1>
+			<h1>VECTORS</h1>
 		</header>
 		<nav>
-			
+			<ul>
+            	<li><a href="index.html">Home</a></li>
+            	<li><a href="#Theory">1. Theory</a></li>
+            	<li><a href="#Vector Operations Exercises">2. Vector Exercises</a></li>
+        	</ul>
 		</nav>
 	</div>
 	<div class="lang lang-es">
 		<header>
-			<h1 id="Top" >VECTORES</h1>
+			<h1>VECTORES</h1>
 		</header>
 		<nav>
-			
+			<ul>
+	            <li><a href="index.html">Inicio</a></li>
+	            <li><a href="#Teoría">1. Teoría</a></li>
+	            <li><a href="#Ejercicios con vectores">2. Ejercicios sobre vectores</a></li>
+	        </ul>
 		</nav>
 	</div>
-        
-        <h1 id="Arriba" class="lang lang-es" lang="es" >VECTORES</h2>
-    </header>
-
-    <nav class="lang lang-en"> <!--Navigation bar. Links to the site's main sections-->
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#Theory">1. Theory</a></li>
-            <li><a href="#Vector Operations Exercises">2. Vector Exercises</a></li>
-        </ul>
-    </nav>
-
-    <nav class="lang lang-es" lang="es"> <!--Navigation bar. Links to the site's main sections-->
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="#Teoría">1. Teoría</a></li>
-            <li><a href="#Ejercicios con vectores">2. Ejercicios sobre vectores</a></li>
-        </ul>
-    </nav>
-
     </div>
         <select id="langSelector">
             <option value="en">English</option>
