--- a/vectors.html
+++ b/vectors.html
@@ -77,7 +77,7 @@
             <section>
                 <h3>1.2 Vectors</h3>
                 <p>
-                    A <strong>vector </strong>is a directed segment, one end of which (the point A) is said to be the origin, while the other (the point B) is said to be the end of the vector. Such a vector may be denoted by <b><i>v</i></b>,  \(\vec{v}\) or \(\vec{AB}\). A vector whose origin and end coincide is said to be a <strong>zero vector</strong>, and is usually denoted by  \(\vec0\). The vector \(\vec{BA}\) is said to be the vector <strong>opposite</strong> to \(\vec{AB}\). A vector with length equal to one is called a <strong>unit vector</strong>. Any direction may be assigned to a zero vector.
+                    A <strong>vector </strong>is a directed segment, one end of which (the point A) is said to be the origin, while the other (the point B) is said to be the end of the vector. Such a vector may be denoted by <b><i>v</i></b>,  \(\vecv\) or \(\\overrightarrow{AB}\). A vector whose origin and end coincide is said to be a <strong>zero vector</strong>, and is usually denoted by  \(\vec0\). The vector \(\\overrightarrow{BA}\) is said to be the vector <strong>opposite</strong> to \(\\overrightarrow{AB}\). A vector with length equal to one is called a <strong>unit vector</strong>. Any direction may be assigned to a zero vector.
                 </p>
             </section>
         </div>
