--- a/vectors.html
+++ b/vectors.html
@@ -77,7 +77,7 @@
             <section>
                 <h3>1.2 Vectors</h3>
                 <p>
-                    A <strong>vector </strong>is a directed segment, one end of which (the point A) is said to be the origin, while the other (the point B) is said to be the end of the vector. Such a vector may be denoted by <b><i>v</i></b>,  \(\vec{}v\) or \(\overrightarrow{AB}\). A vector whose origin and end coincide is said to be a <strong>zero vector</strong>, and is usually denoted by  \(\vec0\). The vector \(\\overrightarrow{BA}\) is said to be the vector <strong>opposite</strong> to \(\\overrightarrow{AB}\). A vector with length equal to one is called a <strong>unit vector</strong>. Any direction may be assigned to a zero vector.
+                    A <strong>vector </strong>is a directed segment, one end of which (the point A) is said to be the origin, while the other (the point B) is said to be the end of the vector. Such a vector may be denoted by <b><i>v</i></b>,  \(\vec{v}\) or \(\overrightarrow{AB}\). A vector whose origin and end coincide is said to be a <strong>zero vector</strong>, and is usually denoted by  \(\vec0\). The vector \(\overrightarrow{BA}\) is said to be the vector <strong>opposite</strong> to \(\overrightarrow{AB}\). A vector with length equal to one is called a <strong>unit vector</strong>. Any direction may be assigned to a zero vector.
                 </p>
             </section>
         </div>
@@ -94,7 +94,7 @@
             <section>
                 <h3>1.2 Vectores</h3>
                 <p class="lang lang-es" lang="es">
-                    Un <strong>vector </strong> es un segmento dirigido, uno de cuyos extremos (el punto A) se dice que es el origen, mientras que el otro (el punto B) se dice que es el final del vector. Tal vector puede ser denotado por <b><i>v</i></b>, \(\vec{v}\) or \(\vec{AB}\). Un vector cuyo origen y fin coinciden se dice que es un <strong>vector cero</strong>, y generalmente se denota por \(\vec0\). El vector \(\vec{BA}\) se dice que es el <strong>vector opuesto</strong> a \(\vec{AB}\). Un vector con una longitud igual a uno se denomina vector unitario. Cualquier dirección puede ser asignada a un vector cero.
+                    Un <strong>vector </strong> es un segmento dirigido, uno de cuyos extremos (el punto A) se dice que es el origen, mientras que el otro (el punto B) se dice que es el final del vector. Tal vector puede ser denotado por <b><i>v</i></b>, \(\vec v\) or \(\overrightarrow{AB}\). Un vector cuyo origen y fin coinciden se dice que es un <strong>vector cero</strong>, y generalmente se denota por \(\vec0\). El vector \(\overrightarrow{BA}\) se dice que es el <strong>vector opuesto</strong> a \(\overrightarrow{AB}\). Un vector con una longitud igual a uno se denomina vector unitario. Cualquier dirección puede ser asignada a un vector cero.
                 </p>
             </section>
         </div>
