--- a/cinematics_es.html
+++ b/cinematics_es.html
@@ -21,10 +21,10 @@
         <script src="scripts/SelectLanguage.js" defer></script>
     </head>
     <body>
-        <select id="langSelector">
+        <!--<select id="langSelector">
             <option value="en">English</option>
             <option value="es">Español</option>
-        </select>
+        </select>-->
         <header><h1>CINEMÁTICA</h1></header>
         <ul>
             <li><a href="index.html">Inicio</a></li>
