--- a/geometry_en.html
+++ b/geometry_en.html
@@ -25,10 +25,10 @@
         <h1 id="Home">2. GEOMETRY</h1>
     </header>
     </div>
-		<select id="langSelector">
-			<option value="en">English</option>
-			<option value="es">Español</option>
-		</select>
+		<!--<select id="langSelector">
+            <option value="en">English</option>
+            <option value="es">Español</option>
+        </select>-->
     <div>
 
 	<nav> <!--Navigation bar. Links to the site's main sections-->
