--- a/cinematics_en.html
+++ b/cinematics_en.html
@@ -21,10 +21,10 @@
         <script src="scripts/SelectLanguage.js" defer></script>
     </head>
     <body>
-        <select id="langSelector">
+        <!--<select id="langSelector">
             <option value="en">English</option>
             <option value="es">Español</option>
-        </select>
+        </select>-->
         <header><h1>CINEMATICS</h1></header>
         <nav>
 			<ul>
