--- a/vectors_es.html
+++ b/vectors_es.html
@@ -25,10 +25,10 @@
         <script src="scripts/SelectLanguage.js" defer></script>
     </head>
     <body>
-        <select id="langSelector">
+        <!--<select id="langSelector">
             <option value="en">English</option>
             <option value="es">Español</option>
-        </select>
+        </select>-->
         <header id="Arriba">
             <h1 >VECTORES</h1>
         </header>
