--- a/kinematics_en.html
+++ b/kinematics_en.html
@@ -30,10 +30,18 @@
 			<ul>
             	<li><a href="index.html">Home</a></li>
             	<li><a href="#Theory">1. Theory</a></li>
-            	<li><a href="#Cinematics Exercises">2. Cinematics Exercises</a></li>
+            	<li><a href="#Kinematics Exercises">2. Kinematics Exercises</a></li>
         	</ul>
 		</nav>
         <article><header><h2 id="Theory">1. Theory and Key Concepts</h2></header>
+            <section>
+                <p>
+                    A body moves when over time it changes position relative to a reference point that is assumed to be fixed.
+                </p>
+                <p>
+                    In this article, dedicated to <strong>kinematics</strong>, we study the movement of physical bodies. This objective will be achieved when we know at each instant where the moving body is and how it moves. We must therefore obtain an equation that relates the position of the body to time.
+                </p>
+            </section>
 
         </article>
     </body>
