--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -32,6 +32,14 @@
             <li><a href="#Ejercicios de cinemática">2. Ejercicios de cinemática</a></li>
         </ul>
         <article><header><h2 id="Teoría">1. Teoría y Conceptos Clave</h2></header>
+            <section><h3>1.1 Introducción</h3>
+                <p>
+                    Un cuerpo se mueve cuando en el transcurso del tiempo cambia de posición respecto a un punto de referencia que se supone fijo.
+                </p>
+                <p>
+                    En este artículo, dedicado a la <strong>cinemática</strong>, estudiamos el movimiento de los cuerpos físicos. Este objetivo estará conseguido cuando sepamos en cada instante donde se encuentra el cuerpo que se mueve y cómo se mueve. Debemos obtener, por tanto, una ecuación que relacione la posición del cueropo con el tiempo.
+                </p>
+            </section>
 
         </article>
     </body>
