--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <ul>
                 <li><a href="vectors_en.html">1. Vectors</a></li>
                 <li><a href="geometry_en.html">2. Geometry</a></li>
-                <li><a href="cinematics_en.html">3. Cinematics</a></li>
+                <li><a href="kinematics_en.html">3. Kinematics</a></li>
             </ul>
         </nav>
     
@@ -45,7 +45,7 @@
             <ul>
                 <li><a href="vectors_es.html">1. Vectores</a></li>
                 <li><a href="geometry_es.html">2. Geometría</a></li>
-                <li><a href="cinematics_es.html">3. Cinemática</a></li>
+                <li><a href="kinematics_es.html">3. Cinemática</a></li>
             </ul>
         </nav>
     
