--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -37,7 +37,7 @@
                     Un cuerpo se mueve cuando en el transcurso del tiempo cambia de posición respecto a un punto de referencia que se supone fijo.
                 </p>
                 <p>
-                    En este artículo, dedicado a la <strong>cinemática</strong>, estudiamos el movimiento de los cuerpos físicos. Este objetivo estará conseguido cuando sepamos en cada instante donde se encuentra el cuerpo que se mueve y cómo se mueve. Debemos obtener, por tanto, una ecuación que relacione la posición del cueropo con el tiempo.
+                    En este artículo, dedicado a la <strong>cinemática</strong>, estudiamos el movimiento de los cuerpos físicos. Este objetivo estará conseguido cuando sepamos en cada instante donde se encuentra el cuerpo que se mueve y cómo se mueve. Debemos obtener, por tanto, una ecuación que relacione la posición del cuerpo con el tiempo.
                 </p>
             </section>
 
