--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -40,7 +40,9 @@
                     En este artículo, dedicado a la <strong>cinemática</strong>, estudiamos el movimiento de los cuerpos físicos. Este objetivo estará conseguido cuando sepamos en cada instante donde se encuentra el cuerpo que se mueve y cómo se mueve. Debemos obtener, por tanto, una ecuación que relacione la posición del cuerpo con el tiempo.
                 </p>
             </section>
+            <section><h3> 1.2 Movimiento y trayectoria</h3>
 
+            </section>
         </article>
     </body>
 </html>
