--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -18,7 +18,10 @@
         <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 
         <!-- loads page script files-->
-        <script src="scripts/SelectLanguage.js" defer></script>
+        <script src="scripts/ArrayFunctions.js"></script> 
+        <script src="scripts/SVGDrawing.js"></script>
+        <script src="scripts/KinematicsPage.js" defer></script>
+        <!--<script src="scripts/SelectLanguage.js" defer></script>-->
     </head>
     <body>
         <!--<select id="langSelector">
@@ -37,11 +40,76 @@
                     Un cuerpo se mueve cuando en el transcurso del tiempo cambia de posición respecto a un punto de referencia que se supone fijo.
                 </p>
                 <p>
-                    En este artículo, dedicado a la <strong>cinemática</strong>, estudiamos el movimiento de los cuerpos físicos. Este objetivo estará conseguido cuando sepamos en cada instante donde se encuentra el cuerpo que se mueve y cómo se mueve. Debemos obtener, por tanto, una ecuación que relacione la posición del cuerpo con el tiempo.
+                    En este artículo, dedicado a la <strong>cinemática</strong>, estudiamos el movimiento de los cuerpos físicos sin considerar las causas que lo producen. Este objetivo estará conseguido cuando sepamos en cada instante donde se encuentra el cuerpo que se mueve y cómo se mueve. Debemos obtener, por tanto, una ecuación que relacione la posición del cuerpo con el tiempo.
+                </p>
+                <p>
+                    Para reducir la complejidad y centrarnos en los conceptos básicos de la cinemática, en lugar de estudiar el movimiento de cualquier cuerpo, comenzaremos estudiando el movimiento de un <strong>punto material</strong>; con el cual representamos a veces, de modo burdo, a un cuerpo. Y le definimos como un punto geométrico en el que consideramos que está concentrada toda la masa del cuerpo.
                 </p>
             </section>
             <section><h3> 1.2 Movimiento y trayectoria</h3>
-
+                <p>
+                    Para determinar la posición de un punto material, es necesario especificar el <strong>sistema de coordenadas</strong> respecto al cual se mide su posición.
+                </p>
+                <p>
+                    La posición de un punto, respecto al sistema de referencia elegido, se describe mediante el <strong>vector de posición</strong> \(\vec r\).
+                </p>
+                <p>
+                    Para estudiar el movimiento, analizaremos cómo varía el vector de posición \(\vec r\) a lo largo del tiempo. Así, buscaremos determinar la función vectorial \(\vec r(t)\), que describa como varían con el tiempo (t) cada uno de sus componentes.
+                </p>
+                <div class="container">
+                    <div  class="center">\( \vec r(t) = x(t)\vec i + y(t)\vec j + z(t)\vec k = (x(t), y(t), z(t)) \)</div>
+                    <div  class="right" id="[1.1]">[1.1]</div>
+                </div>
+                <figure class="centered">
+                    <svg id="svg1_1"></svg >
+                    <figcaption><b>Figura 1.1</b> Vector de posición \(\vec r\), indicando la posición del punto material en un instante determinado y respecto a un sistema de coordenadas dado.</figcaption>
+                </figure>
+                <p>
+                    El extremo del vector posición \(\vec r\) dibuja en el espacio una línea descrita por el punto material en su movimiento. Esta ruta o camino que sigue el punto móvil a lo largo del tiempo se denominada <strong>trayectoria</strong>. Podemos imaginar la trayectoria como una línea que marca el camino exacto del objeto.
+                </p>
+                <p>
+                    Si conocoemos la trayectoria del punto móvil (por ejemplo, una línea recta, una circunferencia, etc.), entonces el problema de describir su movimiento se simplifica mucho. Lo único que necesitamos encontrar es una ecuación que nos diga en qué punto de esa trayectoria se encuentra el objeto en cada instante de tiempo. Si llamamos s al camino recorrido, el problema cinemático se reduce por tanto a conocer s = f(t). 
+                </p>
+                <p>
+                    Por ejemplo, imaginemos una pelota que cae en línea recta. La trayectoria es una línea vertical. Si encontramos una ecuación s = f(t), que nos diga a qué altura está la pelota en cada segundo, entonces hemos resuelto el problema cinemático para esa pelota.
+                </p>
+            </section>
+            <section><h3> 1.3 Vector Desplazamiento</h3>
+                <p>
+                    El instante en el que se inicia el estudio del movimiento de un punto material recibe el nombre de <strong>instante inicial</strong> \(t_0\). La posición del punto en dicho instante es la <strong>posición inicial</strong> \(\vec r_0\).
+                </p>
+                <p>
+                    Como el sistema de referencia temporal, al igual que el instante de referencia espacial, es arbitrario, se considera \(t_0\) = 0.
+                </p>
+                <p>
+                    Con el paso del tiempo, el móvil irá cambiando de posición. En el instante \(t_1\), su posición será \(\vec r(t_1)\), en el instante \(t_2\), será \(\vec r(t_2)\) y así sucesivamente.
+                </p>
+                <p>
+                    Entonces, para representar el cambio de posición del punto material, definimos el <strong>vector desplazamiento</strong> \(\Delta \vec r\) en el intervalo de tiempo [\(t_1\), \(t_2\)] como un vector cuyo origen es la posición del punto en el instante \(t_1\) y cuyo extremo es la posición en el instante \(t_2\).
+                </p>
+                <p> De este modo,</p>
+                <div class="container">
+                    <div  class="center">\(\Delta\vec r = \vec r(t_2) - \vec r(t_1)\)</div>
+                    <div  class="right" id="[1.2]">[1.2]</div>
+                </div>
+                <p>Si llamamos \(\Delta t\) al intervalo de tiempo transcurrido, podemos escribir</p>
+                <p>&emsp; \(t_1 = t\)</p>
+                <p>&emsp; \(t_2 = t + \Delta t\)</p>
+                <div class="container">
+                    <div  class="center">\(\Delta\vec r = \vec r(t + \Delta t) - \vec r(t)\)</div>
+                    <div  class="right" id="[1.3]">[1.3]</div>
+                </div>
+                <p>que puede expresarse también como</p>
+                <div class="container">
+                    <div  class="center">\(\Delta\vec r = \Delta x\vec i + \Delta y\vec j + \Delta z\vec k\)</div>
+                    <div  class="right" id="[1.4]">[1.4]</div>
+                </div>
+                <p>
+                    donde \(\Delta x\), \(\Delta y\) y \(\Delta z\) representan cómo varían las coordenadas del punto en el intervalo de tiempo considerado.
+                </p>
+                <p>
+                    Si el cuerpo se desplaza en línea recta, y sin cambiar el sentido de su movimiento, el módulo del vector desplazamiento coincide con la distancia recorrida por el cuerpo. Pero, esto sólo se cumple en esas circunstancias, porque el vector desplazamiento no depende de la trayectoria seguida por el móvil, solo del punto inicial y final.
+                </p>
             </section>
         </article>
     </body>
