--- a/kinematics_en.html
+++ b/kinematics_en.html
@@ -112,6 +112,18 @@
                 <p>
                     If the body moves in a straight line, and without changing the direction of its movement, the magnitude of the displacement vector coincides with the distance traveled by the body. However, this only applies in these circumstances, because the displacement vector does not depend on the path followed by the object, only on the initial and final points.
                 </p>
+                <figure class="centered">
+                    <svg id="svg1_2"></svg >
+                    <figcaption><b>Figure 1.2</b> Showing the trajectory of a moving object and its displacement vector between two instants \(t_1\) and \(t_2\) as the difference between the position vectors of said instants.</figcaption>
+                </figure>
+            </section>
+            <section><h3>1.4 Velocity</h3>
+                <p>
+                    We said in the Introduction that in the study of the motion of a point we are interested in knowing where it is and how it moves at each instant. We achieve the first objective by knowing the temporal variation of the position vector \(\vec r\), and to know how it moves, that is, what will happen to the moving point in successive instants, we introduce a new magnitude called <strong>velocity</strong>.
+                </p>
+                <p>
+                    Suppose that a certain material point P moves in a time interval \(\Delta t\) from a point 1 to a point 2. Characterized respectively by the position vectors \(\vec r_1\) and \(\vec r_2\).
+                </p>
             </section>
         </article>
     </body>
