--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -110,7 +110,23 @@
                 <p>
                     Si el cuerpo se desplaza en línea recta, y sin cambiar el sentido de su movimiento, el módulo del vector desplazamiento coincide con la distancia recorrida por el cuerpo. Pero, esto sólo se cumple en esas circunstancias, porque el vector desplazamiento no depende de la trayectoria seguida por el móvil, solo del punto inicial y final.
                 </p>
+                <figure class="centered">
+                    <svg id="svg1_2"></svg >
+                    <figcaption><b>Figura 1.2</b> Mostrando la trayectoria de un móvil y su vector desplazamiento entre dos instantes \(t_1\) y \(t_2\) como la diferencia entre los vectores de posición de dichos instantes .</figcaption>
+                </figure>
             </section>
+            <section><h3>1.4 Velocidad</h3>
+                <p>
+                    Decíamos en la Introducción que en el estudio del movimiento de un punto nos interesa saber en cada instante dónde está y cómo se mueve. El primer objetivo lo conseguimos conociendo la variación temporal del vector posicón \(\vec r\), y para saber cómo se mueve, es decir, qué va a pasar con el punto móvil en instantes sucesivos, introducimos una nueva magnitud llamada <strong>velocidad</strong>.
+                </p>
+                <p>
+                    Supongamos que cierto punto material P se traslada en un intervalo de tiempo \(\Delta t\) desde un punto 1 hata un punto 2. Caracterizados respectivamente por los vectores de posición \(\vec r_1\) y \(\vec r_2\).
+                </p>
+            </section>
+            <figure class="centered">
+                <svg id="svg1_3"></svg >
+                <figcaption><b>Figura 1.3</b> Vectorers de posición \(\vec r_1\) y \(\vec r_2\), vector desplazamiento \(\vec \Delta r\) y vectores velocidad \(\vec v_1\) y \(\vec v_2\) de un móvil.</figcaption>
+            </figure>
         </article>
     </body>
 </html>
